# wipple

./: .gitattributes  .gitignore  .swift-format  CHANGELOG.md  COMPILER.md  Cargo.toml  Cross.toml  GUIDE.md  LICENSE  Package.swift  README.md  Taskfile.yml  codecov.yml  coverage.sh  fib.wplb  go.work  go.work.sum  netlify.toml  package-lock.json  package.json  project.wipple  rust-toolchain  test.js  test.out  test.sh
backends/interpreter/: Cargo.toml
cli/: Cargo.toml  build.js  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
cli/src/: args.rs  bundle.rs  doc.rs  index.ts  lsp.rs  lsp.ts  main.rs  new.rs  run.rs
compiler/: .gitignore  Cargo.toml  Package.resolved  Package.swift  build.js  build.sh  go.mod  go.sum  index.d.ts  index.js  index.ts  main.go  main_test.go  package-lock.json  package.json  rollup.config.mjs  test.rs  tsconfig.json
compiler/.cargo/: config.toml
compiler/api/: Cargo.toml  Diagnostics.swift  Documentation.swift  Executable.swift  Graph.swift  IDE.swift  build.js  build.sh  index.browser.ts  index.d.ts  index.js  index.node.ts  index.ts  main.swift  package-lock.json  package.json
compiler/cli/: CLI.swift  Cargo.toml  lsp.rs  main.rs
compiler/codegen/: Cargo.toml  codegen.go
compiler/colors/: colors.go
compiler/core/: Cargo.toml
compiler/database/: db.go  facts.go  graph.go  node.go  span.go
compiler/driver/: Cargo.toml  driver.go  layers.go
compiler/feedback/: Cargo.toml  attributes.go  bounds.go  constants.go  format.go  functions.go  instances.go  names.go  patterns.go  placeholders.go  rank.go  register.go  render.go  structures.go  syntax.go  type_definitions.go  types.go
compiler/ir/: Cargo.toml
compiler/linker/: Cargo.toml
compiler/lower/: Cargo.toml
compiler/lsp/: lsp.go
compiler/main/: Cargo.toml
compiler/parse/: Cargo.toml
compiler/parser/: Cargo.toml
compiler/queries/: Cargo.toml  attributes.go  bounds.go  comments.go  constants.go  definitions.go  format.go  highlight.go  instances.go  order.go  patterns.go  placeholders.go  structures.go  syntax.go  type_definitions.go  types.go
compiler/runtime/: core.js  node-prelude.js  node.js  runtime.js
compiler/server/: compile.go  compile.rs  documentation.go  documentation.rs  format.go  format.rs  get_shared.go  ide_info.go  ide_info.rs  libraries.go  libraries.rs  main.rs  server.go  share.go
compiler/snapshots/: all-any.wipple.snap  average.wipple.snap  bound.wipple.snap  bounds-are-one-way.wipple.snap  bounds-dont-influence-other-bounds.wipple.snap  build-sequence.wipple.snap  call-function-diagnostic.wipple.snap  collections.wipple.snap  colliding-instances.wipple.snap  comment-at-end-of-block.wipple.snap  comparison.wipple.snap  complex-nested-bounds.wipple.snap  constant-mismatched-types.wipple.snap  custom-errors.wipple.snap  default-constraint.wipple.snap  default-instance.wipple.snap  default-type-parameter.wipple.snap  destructuring.wipple.snap  dictionary.wipple.snap  divisible-by.wipple.snap  enumerate.wipple.snap  enumeration.wipple.snap  exhaustiveness-checking.wipple.snap  format.wipple.snap  generic-call-within-generic-constant.wipple.snap  generic-instance.wipple.snap  generic-type.wipple.snap  greet.wipple.snap  hello-world.wipple.snap  implied-instance.wipple.snap  infer-constraint.wipple.snap  infer.wipple.snap  is.wipple.snap  linked-list.wipple.snap  list-mismatched-elements.wipple.snap  lists.wipple.snap  logic.wipple.snap  math.wipple.snap  mismatched-call.wipple.snap  mismatched-inferred-params.wipple.snap  (+65 more)
compiler/src/: DB.swift  Driver.swift  Graph.swift  Layers.swift  Node.swift  Render.swift  Span.swift  lib.rs
compiler/syntax/: Cargo.toml  error.go  format.go  lexer.go  names.go  parse.go  parser.go
compiler/tests/: all-any.wipple  average.wipple  bound.wipple  collections.wipple  colliding-instances.wipple  comment-at-end-of-block.wipple  comparison.wipple  custom-errors.wipple  default-instance.wipple  destructuring.wipple  dictionary.wipple  divisible-by.wipple  enumerate.wipple  greet.wipple  hello-world.wipple  implied-instance.wipple  infer.wipple  is.wipple  linked-list.wipple  math.wipple  missing-inputs.wipple  missing-runtime-type.wipple  nested-bounds.wipple  nested-patterns.wipple  not.wipple  number-units.wipple  operator-without-parentheses.wipple  recursive-bounds.wipple  recursive-instance.wipple  repeat-missing-times.wipple  replicate.wipple  set.wipple  show-variable.wipple  trig.wipple  undefined-math-ops.wipple  when-mismatched-types.wipple
compiler/typecheck/: Cargo.toml  bound_constraint.go  (+12 more)
core/: Cargo.toml
frontend/: Cargo.toml  README.md
fuzz/: Cargo.toml
interpreter/: .gitignore  Cargo.toml  build.js  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
parser/: Cargo.toml
playground-interpreter/: Cargo.toml
project/: Cargo.toml
projects/: Cargo.toml
render/: .gitignore  Cargo.toml  build.js  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
syntax/: Cargo.toml
test/: Cargo.toml  bunfig.toml  index.js  index.js.snapshot  jest.config.js  package-lock.json  package.json  tsconfig.json  wipple-plugin.ts  wipple-transformer.js
tests/: .gitignore  Cargo.toml  all-any.wpl  asset.wpl  asset.yml  average.wpl  bound-placeholder.wpl  bound-placeholder.yml  bound.wpl  bounds-are-one-way.stderr  bounds-are-one-way.wpl  bounds-dont-influence-other-bounds.stderr  bounds-dont-influence-other-bounds.wpl  call-function-diagnostic.stderr  call-function-diagnostic.wpl  call-function-diagnostic.yml  collections.wpl  collections.yml  colliding-instances.stderr  colliding-instances.wpl  colliding-instances.yml  comparison.stdout  comparison.wpl  complex-nested-bounds.wipple  compose.wpl  constant-captured-variables.stderr  constant-captured-variables.wpl  constant-captured-variables.yml  constant-mismatched-types.stderr  constant-mismatched-types.yml  context.wpl  context.yml  custom-errors.wipple  default-constraint.wipple  default-type-parameter.wpl  destructuring.wpl  destructuring.yml  dictionary.stdout  dictionary.wpl  did-you-mean.stderr  (+140 more)
(+3684 files in other folders)
