[workspace]
resolver = "3"
members = ["compiler"]

[profile.dev]
opt-level = 1

[profile.release]
debug = true

[workspace.lints.rust]
elided_lifetimes_in_paths = "deny"

[workspace.lints.clippy]
dbg_macro = "warn"
new_ret_no_self = "allow"
print_stderr = "warn"
redundant_clone = "warn"
result_large_err = "allow"
type_complexity = "allow"
