[package]
name = "wipple"
version = "0.0.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
annotate-snippets = "0.11"
anstream = "0.6"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
futures = "0.3"
line-index = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
unicode-segmentation = "1"
wipple-driver = { path = "../compiler/driver" }
wipple-interpreter = { path = "../interpreter" }
wipple-render = { path = "../render"}
