[package]
name = "wipple-cli"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "wipple"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
codespan-reporting = "0.12"
indicatif = "0.18"
tokio = { version = "1", features = ["full"] }
wipple-api = { path = "../functions/api" }
