[package]
name = "wipple-compiler"
version = "0.0.0"
edition = "2024"

[lints.rust]
elided_lifetimes_in_paths = "deny"
unused_crate_dependencies = "warn"

[lints.clippy]
dbg_macro = "warn"
large_enum_variant = "allow"
new_without_default = "allow"
print_stderr = "warn"
redundant_clone = "warn"
result_large_err = "allow"
too_many_arguments = "allow"
type_complexity = "allow"

[dependencies]
in_definite = "1"
itertools = "0.14"
lazy_static = "1"
line-index = "0.1"
logos = "0.15"
rustc_lexer = "0.1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
typeshare = "1"
