[package]
name = "wipple"
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[[bin]]
name = "wipple"
path = "cli/main.rs"

[[bin]]
name = "wipple-server"
path = "server/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "3"
dashmap = "6"
datatest-stable = "0.3"
dyn-clone = "1"
im = "15"
insta = "1"
itertools = "0.14"
lambda_http = "1"
lambda_runtime = { version = "1", features = ["anyhow"] }
line-index = "0.1"
logos = "0.16"
petgraph = "0.8"
rayon = "1"
regex = "1"
reqwest = { version = "0.13", features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
source-map = "0.15"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tower-lsp-server = "0.23"
