[package]
name = "wipple"
version = "0.0.0"
edition = "2018"

[features]
debug_cell = ["debug-cell"]
log_diagnostics = []

[dependencies]
bigdecimal = "0.2.0"
debug-cell = { version = "0.1.1", optional = true }
dynamic = { git = "https://github.com/wipplelang/dynamic" }
paste = "1.0.4"
ref_thread_local = "0.1.0"
