[package]
name = "wipple-frontend"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-recursion = "1"
async-trait = "0.1"
backtrace = "0.3"
codespan-reporting = "0.11"
distance = "0.4"
enum_dispatch = "0.3"
futures = "0.3"
im = "15"
indexmap = "1"
internment = "0.7"
itertools = "0.10"
lazy_static = "1"
logos = "0.12"
parking_lot = "0.12"
paste = "1"
peg = "0.8"
petgraph = "0.6"
pretty = "0.12"
regex = "1"
replace_with = "0.1"
rust_decimal = "1"
rustc_lexer = "0.1"
strum = { version = "0.24", features = ["derive"] }
