[package]
name = "wipple-frontend"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-recursion = "1"
async-trait = "0.1"
backtrace = "0.3"
codespan-reporting = "0.11"
convert_case = { git = "https://github.com/WilsonGramer/convert-case", branch = "master" }
distance = "0.4"
enum_dispatch = "0.3"
futures = "0.3"
im = { version = "15", features = ["serde"] }
indexmap = "1"
internment = { version = "0.7", features = ["serde"] }
itertools = "0.10"
lazy_static = "1"
parking_lot = { version = "0.12", features = ["serde"] }
paste = "1"
peg = "0.8"
petgraph = "0.6"
pretty = "0.12"
regex = "1"
replace_with = "0.1"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
strum = { version = "0.24", features = ["derive"] }
wipple-syntax = { path = "../syntax" }
wipple-util = { path = "../util" }
