[package]
name = "wipple-fuzz"
version = "0.0.0"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
libfuzzer-sys = "0.4"
tokio = "1"
wipple-default-loader = { path = "../loaders/default" }
wipple-frontend = { path = "../frontend" }
wipple-syntax = { path = "../syntax", features = ["arbitrary"] }
wipple-util = { path = "../util" }

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
