[package]
name = "wipple-interpreter"
version = "0.0.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
async-channel = "2"
async-lock = { version = "3", default-features = false }
derivative = "2"
futures = "0.3"
rand = "0.8"
rust_decimal = { version = "1", features = ["maths", "rand"] }
rust_decimal_macros = "1"
wipple-driver = { path = "../compiler/driver" }
