[package]
name = "wipple_playground_interpreter"
version = "0.0.17"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
wipple = { path = "../core" }
wipple_parser = { path = "../parser" }
