[package]
name = "wipple-project"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "wipple"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
gitoxide = "0.37"
glob = "0.3"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
tempdir = "0.3"
url = { version = "2", features = ["serde"] }
which = "6"
