[package]
name = "wipple_projects"
version = "0.0.0"
edition = "2018"

[dependencies]
git2 = "0.13.17"
dirs = "3.0.1"
reqwest = { version = "0.11.3", features = ["blocking"] }
rust-embed = "5.9.0"
tempfile = "3.2.0"
wipple = { path = "../core" }
wipple_parser = { path = "../parser" }
wipple_plugins = { path = "../plugins" }
zip = "0.5.12"
