[package]
name = "wipple-syntax"
version = "0.0.0"
edition = "2021"

[features]
utf16 = []

[dependencies]
async-recursion = "1"
async-trait = "0.1"
either = "1"
futures = "0.3"
im = "15"
lazy_static = "1"
logos = "0.12"
paste = "1"
regex = "1"
rustc_lexer = "0.1"
string-interner = "0.14"
strum = { version = "0.24", features = ["derive"] }
sync_wrapper = "0.1"
wipple-util = { path = "../util" }
