[package]
name = "wipple-test"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
codemap = "=0.1.2"
codemap-diagnostic = "0.1"
colored = "2"
junit-report = "0.7"
parking_lot = "0.12"
serde = "1"
serde_yaml = "0.8"
similar = "2"
tokio = { version = "1", features = ["full"] }
wipple-default-loader = { path = "../loaders/default" }
wipple-frontend = { path = "../frontend", features = ["clap"] }
wipple-interpreter-backend = { path = "../backends/interpreter" }
