[package]
name = "wipple-test"
version = "0.0.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
futures = "0.3"
insta = { version = "1", features = ["yaml"] }
rstest = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
wipple-driver = { path = "../compiler/driver" }
wipple-interpreter = { path = "../interpreter" }
wipple-render = { path = "../render"}
