[package]
name = "wipple-interpreter-backend"
version = "0.0.0"
edition = "2021"

[dependencies]
im = "15"
itertools = "0.10"
num-traits = "0.2"
rust_decimal = { version = "1", features = ["maths"] }
smallvec = { version = "1", features = ["const_generics", "union"] }
wipple-frontend = { path = "../../frontend" }
