[package]
name = "wipple-api"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
base64 = "0.22"
rmp-serde = "1"
wasm-bindgen = "0.2"
wat = "1"
wipple-core = { path = "../core" }
wipple-feedback = { path = "../feedback" }
wipple-parse = { path = "../parse" }
wipple-queries = { path = "../queries" }
wipple-syntax = { path = "../syntax" }
