[package]
name = "wipple-cli"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "wipple"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
wat = "1"
wipple-core = { path = "../core" }
wipple-feedback = { path = "../feedback" }
wipple-queries = { path = "../queries" }
wipple-syntax = { path = "../syntax" }
