[package]
name = "wipple-core"
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1"
dyn-clone = "1"
gimli = "0.33"
itertools = "0.14"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol_str = { version = "0.3", features = ["serde"] }
typetag = "0.2"
wasm-encoder = "0.250"
wasmparser = "0.250"
