[package]
name = "wipple-core"
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1"
dyn-clone = "1"
itertools = "0.14"
regex = "1"
parcel_sourcemap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol_str = { version = "0.3", features = ["serde"] }
typetag = "0.2"
