[package]
name = "wipple-driver"
version = "0.0.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
codespan-reporting = "0.11"
convert_case = "0.6"
distance = "0.4"
itertools = "0.12"
serde = { version = "1", features = ["derive"] }
wipple-ir = { path = "../ir" }
wipple-linker = { path = "../linker" }
wipple-lower = { path = "../lower" }
wipple-syntax = { path = "../syntax" }
wipple-typecheck = { path = "../typecheck" }
wipple-util = { path = "../util" }
