[package]
name = "wipple-linker"
version = "0.0.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
derivative = "2"
serde = { version = "1", features = ["derive"] }
wipple-codegen = { path = "../codegen" }
wipple-typecheck = { path = "../analysis/typecheck" }
wipple-util = { path = "../util" }
