[package]
name = "wipple-compiler"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
default = ["console_error_panic_hook"]

[dependencies]
codespan-reporting = "0.11"
console_error_panic_hook = { version = "0.1.7", optional = true }
distance = "0.4"
itertools = "0.12"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { git = "https://github.com/WilsonGramer/ts-rs", branch = "bound-attribute", features = ["no-serde-warnings"] }
wasm-bindgen = "0.2"
wipple-codegen = { path = "../codegen" }
wipple-linker = { path = "../linker" }
wipple-lower = { path = "../analysis/lower" }
wipple-syntax = { path = "../syntax" }
wipple-typecheck = { path = "../analysis/typecheck" }
wipple-util = { path = "../util" }
