[package]
name = "wipple-util"
version = "0.0.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
ts-rs = { git = "https://github.com/WilsonGramer/ts-rs", branch = "concrete", features = ["no-serde-warnings"] }
web-sys = { version = "0.3", features = ["console"] }
