[package]
name = "wipple-api"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1"
aws_lambda_events = "0.17"
axum = "0.8"
console_error_panic_hook = "0.1"
dashmap = "6"
lambda_runtime = "0.14"
rust-embed = { version = "8", features = ["include-exclude"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-br"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
wipple-compiler = { path = "../../compiler" }
