[package]
name = "wipple-default-loader"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
path-clean = "0.1"
url = "2"
wipple-compiler = { path = "../../compiler" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
