[package]
name = "wipple-default-loader"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"
path-clean = "0.1"
replace_with = "0.1"
url = "2"
wipple-compiler = { path = "../../compiler" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
