[package]
name = "wipple-default-loader"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"
path-clean = "0.1"
url = "2"
wipple-frontend = { path = "../../frontend" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "4"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
