[package]
name = "wipple_cli"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "wipple"
path = "src/main.rs"

[dependencies]
anyhow = "1"
codemap-diagnostic = "0.1"
internment = "0.5"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
strum = { version = "0.21", features = ["derive"] }
wipple_diagnostics = { path = "../diagnostics" }
wipple_formatter = { path = "../formatter" }
wipple_frontend = { path = "../frontend" }
wipple_interpreter_backend = { path = "../backends/interpreter" }
wipple_js_backend = { path = "../backends/js" }
wipple_parser = { path = "../parser" }
