[package]
name = "wipple_cli"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "wipple"
path = "src/main.rs"

[dependencies]
anyhow = "1"
codemap-diagnostic = "0.1"
directories = "4"
interned-string = { path = "../helpers/interned-string" }
serde_json = "1"
structopt = "0.3"
wipple_diagnostics = { path = "../diagnostics" }
wipple_frontend = { path = "../frontend" }
wipple_bundled_backend_builder = { path = "../backends/bundled/builder" }
wipple_interpreter_backend = { path = "../backends/interpreter" }
