[package]
name = "wipple_diagnostics"
version = "0.0.0"
edition = "2021"

[dependencies]
backtrace = { version = "0.3", features = ["serde"] }
codemap = "=0.1.2"
codemap-diagnostic = "0.1"
interned-string = { path = "../helpers/interned-string" }
serde = { version = "1", features = ["derive", "rc"] }
